Brand create modal

--- a/public/backend/assets/master.scss
+++ b/public/backend/assets/master.scss
@@ -86,6 +86,7 @@ $transition: all 0.2s ease-in-out;
 @import "components/top_nav";
 // @import "deshboard/deshboard";
 @import "components/nl_modal";
+@import "mixin/nl_datatable";
 
 // /* ------------------------------------ */
 
