--- a/public/backend/assets/components/_content.scss
+++ b/public/backend/assets/components/_content.scss
@@ -3,7 +3,7 @@
     padding: 15px;
     padding-top: 85px;
     padding-left: calc(15px + var(--aside));
-    transition: $transition;
+    transition: var(--transition);
     &.active {
         width: 100% !important;
         padding-left: 15px;
