--- a/public/backend/common/bootstrap/scss/forms/_form-control.scss
+++ b/public/backend/common/bootstrap/scss/forms/_form-control.scss
@@ -36,12 +36,12 @@
     background-color: $input-focus-bg;
     border-color: $input-focus-border-color;
     outline: 0;
-    @if $enable-shadows {
-      @include box-shadow($input-box-shadow, $input-focus-box-shadow);
-    } @else {
-      // Avoid using mixin so we can pass custom focus shadow properly
-      box-shadow: $input-focus-box-shadow;
-    }
+    // @if $enable-shadows {
+    //   @include box-shadow($input-box-shadow, $input-focus-box-shadow);
+    // } @else {
+    //   // Avoid using mixin so we can pass custom focus shadow properly
+    //   box-shadow: $input-focus-box-shadow;
+    // }
   }
 
   // Add some height to date inputs on iOS
